# cs50w-network

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg  tasks.py
.github/: dependabot.yml
.github/workflows/: checks.yml
network/: admin.py  apps.py  factories.py  filters.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/api/: urls.py  views.py
network/migrations/: 0001_initial.py
network/static/network/: index.js  layout.js  styles.css  timeline.js  utils.js
network/static/network/components/: post.js
network/static/network/features/: follow.js  stickyNav.js
network/templates/network/: index.html  layout.html  login.html  notfound.html  register.html  timeline.html
network/templates/network/fragments/: follow.html
network/templates/network/post/: create.html  detail.html  list.html  update.html
network/templates/network/user/: detail.html  timeline.html
network/tests/: test_permissions.py
project4/: asgi.py  local.template.py  settings.py  urls.py  wsgi.py
project4/common/: __init__.py  databases.py  drf.py  installed_apps.py  middleware.py  paths.py  static.py  templates.py
provision/: ci.py  common.py  django.py  docker.py  linters.py  project.py  start.py  system.py
requirements/: development.in  development.txt  production.in  production.txt
static/: styles.css
static/htmx/: htmx.min.js
static/hyperscript/: hyperscript.min.js
static/network/: index.js  layout.js  timeline.js
static/network/components/: post.js  userprofile.js
static/network/css/: styles.css
static/network/features/: follow.js  like.js  stickyNav.js
static/network/js/: index.js
static/sweetalert/: sweetalert.min.js
staticfiles/: staticfiles.json
staticfiles/network/: index.js  styles.css  timeline.8822402fac6d.js
staticfiles/network/components/: post.b3801b244acd.js  userprofile.15563a21a3c7.js
staticfiles/network/features/: like.cac5c48e1f5c.js
templates/: base.html  index.html  login.html  notfound.html  register.html  timeline.html
templates/fragments/post/: detail.html  update.html
templates/fragments/user/: detail.html  follow.html
templates/post/: list.html
templates/user/: timeline.html
